# proyecto-secreto

./: CMakeLists.txt  DEPENDENCY_LICENSES.md  LICENSE  README.md  instrucciones.md
.github/workflows/: pages.yml
docs/: control-center.html  index.html  obs-browser-overlay.html  virtual-studio.html  windows-exe-build.md
docs/assets/: control-center.css  control-center.js  site.css
src/: plugin_main.cpp
